// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Default Bookmark Button 1`] = `
<button
  className="sc-bdfBQB jwyqxD"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Marked Bookmark Button 1`] = `
<button
  className="sc-bdfBQB hoVnRM"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-gsTEea cOhArm"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-gsTEea hancQJ"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Курс разработки
  </div>
  <div
    className="sc-pGacB dstOjI"
  >
    <div
      className="sc-kEjbQP fGgwSW"
    >
      Все курсы
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Возраст
  </div>
  <div
    className="sc-pGacB dstOjI"
  >
    <div
      className="sc-kEjbQP fGgwSW"
    >
      Любой
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Курс разработки
  </div>
  <div
    className="sc-pGacB INRxT"
  >
    <div
      className="sc-kEjbQP cvqIdf"
    >
      Все курсы
    </div>
    <div
      className="sc-iqHYmW bdsSrN"
    >
      <button
        className="sc-crrszt ioLsEV"
      >
        Отменить все
      </button>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Front end"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="Front end"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Front end
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Java"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="Java"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Java
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Python"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="Python"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        Python
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="iOS"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="iOS"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        iOS
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Возраст
  </div>
  <div
    className="sc-pGacB INRxT"
  >
    <div
      className="sc-kEjbQP cvqIdf"
    >
      Любой
    </div>
    <div
      className="sc-iqHYmW bdsSrN"
    >
      <button
        className="sc-crrszt ioLsEV"
      >
        Отменить все
      </button>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="меньше 18"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="меньше 18"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        меньше 18
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="18-30"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="18-30"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        18-30
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="30-45"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="30-45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        30-45
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="больше 45"
      >
        <input
          checked={true}
          className="sc-iBPTik kpuuOp"
          id="больше 45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq jowVRj"
        />
        больше 45
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-kstqJO kTnZJY"
>
  <span
    className="sc-hBEYId jrglmu"
  >
    E-mail
  </span>
  <input
    className="sc-bqyKOL ehFbLO"
    placeholder="Введите e-mail"
    type="email"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-kstqJO kTnZJY"
>
  <span
    className="sc-hBEYId vWLEl"
  >
    Некорректный e-mail
  </span>
  <input
    className="sc-bqyKOL gwTpaH"
    placeholder="Введите e-mail"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/LoginForm Login Correct 1`] = `
<div
  className="sc-iJuVqt idPorr"
>
  <div
    className="sc-giImIA dopqdC"
  />
  <div
    className="sc-ezredP"
  >
    <h2
      className="sc-bYEvvW eMeZlo"
    >
      Авторизация
    </h2>
    <label
      className="sc-kstqJO kTnZJY"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Email
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите e-mail"
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-kstqJO kTnZJY"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Пароль
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите пароль"
        type="password"
        value=""
      />
    </label>
    <label
      className="sc-gKseQn peujJ sc-kLgnNl hQLecp"
    >
      <input
        checked={true}
        className="sc-iBPTik kpuuOp"
        type="checkbox"
      />
      <div
        className="sc-jSgvzq jowVRj"
      />
      Оставаться в системе на этом устройстве
    </label>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Войти в систему
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/LoginForm Login Incorrect 1`] = `
<div
  className="sc-iJuVqt idPorr"
>
  <div
    className="sc-giImIA dopqdC"
  />
  <div
    className="sc-ezredP"
  >
    <h2
      className="sc-bYEvvW eMeZlo"
    >
      Авторизация
    </h2>
    <label
      className="sc-kstqJO kTnZJY"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Email
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите e-mail"
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-kstqJO kTnZJY"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Пароль
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите пароль"
        type="password"
        value=""
      />
    </label>
    <label
      className="sc-gKseQn peujJ sc-kLgnNl hQLecp"
    >
      <input
        className="sc-iBPTik kpuuOp"
        type="checkbox"
      />
      <div
        className="sc-jSgvzq jowVRj"
      />
      Оставаться в системе на этом устройстве
    </label>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Войти в систему
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/NavbarMenu Navbar 1`] = `
<nav
  className="sc-jNMcJZ glHkXQ"
>
  <div
    className="sc-dOSRxR kKXNRy"
  />
  <ul
    className="sc-bBrNTY fLtnTG"
  >
    <li
      className="sc-cOajNj cVqjWg"
    >
      <a
        className="sc-Azgjq dfNXqP"
        href="/resumes"
      >
        Резюме
      </a>
    </li>
    <li
      className="sc-cOajNj cVqjWg"
    >
      <a
        className="sc-Azgjq dfNXqP"
        href="/responses"
      >
        Отклики
      </a>
    </li>
    <li
      className="sc-cOajNj cVqjWg"
    >
      <a
        className="sc-Azgjq dfNXqP"
        href="/bookmarks"
      >
        Избранное
      </a>
    </li>
  </ul>
  <div
    className="sc-khAkCZ jCkvoh"
  >
    <div
      className="sc-iUuxjF bxccC sc-hTZgZg iBOrhG"
    >
      <div
        className="sc-fodVek bRbfIZ"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-bZSRNg yEACq"
    >
      <div
        className="sc-dIUeWJ gLCjTF sc-dmlqKv sc-jcVcSv iueIgU ieGecd"
        onClick={[Function]}
      >
        <p
          className="sc-hHfuMS fCzkIl"
        >
          ИИ
        </p>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Empty 1`] = `
<div
  className="sc-fodVek hRPeSD"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter One 1`] = `
<div
  className="sc-fodVek bRbfIZ"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Two 1`] = `
<div
  className="sc-fodVek UxbVE"
/>
`;

exports[`Storyshots TMS/Notifications Notifications Empty 1`] = `
<div
  className="sc-iUuxjF bxccC"
>
  <div
    className="sc-fodVek hRPeSD"
  />
  <div
    className="sc-iktFfs KoGur sc-iBaQBe gdhkZf"
  >
    <ul
      className="sc-eggMyH kHZa-Dt"
    >
      <li
        className="sc-cTkxnA dHyWHX"
      >
        "У вас нет новых уведомлений"
      </li>
    </ul>
    <div
      className="sc-jJEKmz gcLRpF"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications One 1`] = `
<div
  className="sc-iUuxjF bxccC"
>
  <div
    className="sc-fodVek bRbfIZ"
  />
  <div
    className="sc-iktFfs KoGur sc-iBaQBe gdhkZf"
  >
    <ul
      className="sc-eggMyH kHZa-Dt"
    >
      <li
        className="sc-cTkxnA dHyWHX"
      >
        "У вас 5 новых приглашений"
      </li>
    </ul>
    <div
      className="sc-jJEKmz gcLRpF"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications Two 1`] = `
<div
  className="sc-iUuxjF bxccC"
>
  <div
    className="sc-fodVek UxbVE"
  />
  <div
    className="sc-iktFfs KoGur sc-iBaQBe gdhkZf"
  >
    <ul
      className="sc-eggMyH kHZa-Dt"
    >
      <li
        className="sc-cTkxnA dHyWHX"
      >
        "У вас 59 новых приглашений"
      </li>
      <li
        className="sc-cTkxnA dHyWHX"
      >
        "У вас 63 новых ответов"
      </li>
      <li
        className="sc-cTkxnA dHyWHX"
      >
        "У вас 27 новых отказов"
      </li>
    </ul>
    <div
      className="sc-jJEKmz gcLRpF"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Search Input Search 1`] = `
<div
  className="sc-fFucqa kXEENg"
>
  <input
    className="sc-bkzYnD dorCSu"
    placeholder="search"
    type="search"
  />
  <div
    className="sc-idOiZg cVPmFa"
  />
</div>
`;

exports[`Storyshots TMS/Search Search Closed 1`] = `
<div
  className="sc-jgHCSr eeclvY"
>
  <div
    className="sc-gTgzoy gxUPth"
  >
    <div
      className="sc-fFucqa kXEENg"
    >
      <input
        className="sc-bkzYnD dorCSu"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-idOiZg cVPmFa"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-eJMPIT kvwljz"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/Search Search Opened 1`] = `
<div
  className="sc-jgHCSr eeclvY"
>
  <div
    className="sc-gTgzoy eFwjsv"
  >
    <div
      className="sc-fFucqa kXEENg"
    >
      <input
        className="sc-bkzYnD dorCSu"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-idOiZg cVPmFa"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-eJMPIT ciQQrc"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
  <div
    className="sc-laRQdt drFRBX"
  >
    <ul
      className="sc-iNqMzA DufTZ"
    >
      <li
        className="sc-jeGTLq"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Курс разработки
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Все курсы
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-jeGTLq"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Оценка диплома
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Все оценки
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-jeGTLq"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Возраст
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Любой
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-jeGTLq"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Английский язык
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Любой уровень
            </div>
          </div>
        </div>
      </li>
    </ul>
    <button
      className="sc-gsTEea cOhArm sc-eJMPIT sc-nFqVA ciQQrc fQNksB"
      type="button"
    >
      СКРЫТЬ ФИЛЬТРЫ
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Marked 1`] = `
<div
  className="sc-bTvSiT kzBymG"
>
  <div
    className="sc-kIeSZW dRWUoT"
  >
    <div
      className="sc-dtwnrN cjeHNF"
    />
    <div
      className="sc-hOqruk fNRkDe"
    >
      <div
        className="sc-dacGJm gkXOye"
      >
        <h2
          className="sc-jUEmfL hmCzWo"
        >
          Роман
           
          Шашков
        </h2>
        <p
          className="sc-jQbJRc bjRIVV"
        >
          Python Developer
          , 25 лет
        </p>
      </div>
      <div
        className="sc-fvhFOF ioycrd"
      >
        <button
          className="sc-gsTEea cOhArm sc-fbNZge fTMZID"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB hoVnRM"
          type="button"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-GTVdH dfnMNN"
  >
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Back End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              8
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <a
            className="sc-clsFYl cthHut"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <p
            className="sc-gGmKaI eUdBfQ"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <ul
            className="sc-fbkiRW iuPcyx"
          >
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                HTML
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                CSS
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                SPA
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                React
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                NPM
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                Webpack
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <ul
            className="sc-dwfUuu jnhpqO"
          >
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Неоконченное высшее образование
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                 БГУИР ИИТ. Компьютерных технологий, Вычислительные машины, системы и сети
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Английский язык
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                Intermediate
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Дополнительное образование
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                Школа программирования &lt;TeachMeSkills/&gt;
              </p>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <p
            className="sc-gGmKaI eUdBfQ"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <ul
            className="sc-dwfUuu jnhpqO"
          >
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Город
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                Минск
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Способ связи
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                375 29 000-00-00
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                ivan@teachmeskills@com
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Социальные сети
              </p>
              <ul
                className="sc-jONnzC zcouq"
              >
                <li
                  className="sc-hlTwrV fSXfiO"
                >
                  <a
                    className="sc-eLgNKc cYcaUs"
                    href="https://dfg"
                    name="facebook"
                  />
                </li>
                <li
                  className="sc-hlTwrV fSXfiO"
                >
                  <a
                    className="sc-eLgNKc dDHtQI"
                    href="https://dfg"
                    name="instagram"
                  />
                </li>
                <li
                  className="sc-hlTwrV fSXfiO"
                >
                  <a
                    className="sc-eLgNKc eKCdnq"
                    href="https://dfg"
                    name="linkedin"
                  />
                </li>
                <li
                  className="sc-hlTwrV fSXfiO"
                >
                  <a
                    className="sc-eLgNKc hnpkVZ"
                    href="https://dfg"
                    name="vk"
                  />
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Not Marked 1`] = `
<div
  className="sc-bTvSiT kzBymG"
>
  <div
    className="sc-kIeSZW dRWUoT"
  >
    <div
      className="sc-dtwnrN cjeHNF"
    />
    <div
      className="sc-hOqruk bImHVu"
    >
      <div
        className="sc-dacGJm gkXOye"
      >
        <h2
          className="sc-jUEmfL hmCzWo"
        >
          Иван
           
          Иванов
        </h2>
        <p
          className="sc-jQbJRc bjRIVV"
        >
          Java Developer
        </p>
      </div>
      <div
        className="sc-fvhFOF ioycrd"
      >
        <button
          className="sc-gsTEea cOhArm sc-fbNZge fTMZID"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB jwyqxD"
          type="button"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-GTVdH dfnMNN"
  >
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Front End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              10
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <a
            className="sc-clsFYl cthHut"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <p
            className="sc-gGmKaI eUdBfQ"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <ul
            className="sc-fbkiRW iuPcyx"
          >
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                HTML
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                CSS
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                SPA
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                React
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                NPM
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                Webpack
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                Java SE
              </div>
            </li>
            <li
              className="sc-GqePz lahVpz"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-fWSDcn iiSOZT"
              >
                My SQL
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <ul
            className="sc-dwfUuu jnhpqO"
          >
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Неоконченное высшее образование
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                 БГУИР ИИТ. Компьютерных технологий, Вычислительные машины, системы и сети
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Английский язык
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                Upper intermediate
              </p>
            </li>
            <li
              className="sc-TmdmN fVfLUM"
            >
              <p
                className="sc-jHVedQ cEtIbJ"
              >
                Дополнительное образование
              </p>
              <p
                className="sc-aemIz btnhVo"
              >
                Школа программирования &lt;TeachMeSkills/&gt;
              </p>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          <p
            className="sc-gGmKaI eUdBfQ"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-gsxoIA dfBsVV"
    >
      <div
        className="sc-higWrZ jmEOr"
      >
        <p
          className="sc-ehSDrC kejJCx"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-lcuiOb hMPJWD"
        >
          Контакты студента станут вам доступны после принятия вашего приглашения.
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-dIUeWJ cHenSq sc-dmlqKv ljCwyN"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-dIUeWJ cHenSq"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-dIUeWJ gLCjTF sc-dmlqKv iueIgU"
>
  <p
    className="sc-hHfuMS fCzkIl"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-dIUeWJ gLCjTF"
>
  <p
    className="sc-hHfuMS fCzkIl"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-bXDkGd dEsvkk"
>
  <div
    className="sc-dIUeWJ gLCjTF"
  >
    <p
      className="sc-hHfuMS fCzkIl"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-ctaXho dXCLQU"
  >
    <h3
      className="sc-bsipwG gSAbyE"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-gInthZ jLMzqK"
    >
      Java Developer
    </p>
    <div
      className="sc-euMpEg keXrQd"
    >
      <div
        className="sc-kfzBvY btInxJ"
      >
        Front End
      </div>
      <div
        className="sc-kfzBvY jnSIkd"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-bXDkGd jxkVxL"
>
  <div
    className="sc-dIUeWJ cHenSq"
  />
  <div
    className="sc-ctaXho dXCLQU"
  >
    <h3
      className="sc-bsipwG gSAbyE"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-gInthZ jLMzqK"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-euMpEg keXrQd"
    >
      <div
        className="sc-kfzBvY btInxJ"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course And Score Tag 1`] = `
<div
  className="sc-dlfnuX jEwccD"
>
  <div
    className="sc-hKgJUU exSYKH"
  >
    Front End
  </div>
  <div
    className="sc-eCstlR jmBBBx"
  >
    10
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-fKFxtB hZUaLh"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-kfzBvY jnSIkd"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-kfzBvY btInxJ"
>
  Front End
</div>
`;

exports[`Storyshots TMS/UserMenu Drop Down Menu 1`] = `
<div
  className="sc-bZSRNg yEACq"
>
  <div
    className="sc-dIUeWJ gLCjTF sc-dmlqKv sc-jcVcSv iueIgU ieGecd"
  >
    <p
      className="sc-hHfuMS fCzkIl"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-iktFfs KoGur sc-hiSbEG jlwSWH"
  >
    <div
      className="sc-gWHigU hekQWC"
    >
      Иван
       
      Иванов
    </div>
    <ul
      className="sc-cBNeex eROBZi"
    >
      <li
        className="sc-citxvW jbJqkU"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/user"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="profile-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            ПРОФИЛЬ
          </div>
        </a>
      </li>
      <li
        className="sc-citxvW jbJqkU"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/setting"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="setting-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            НАСТРОЙКИ
          </div>
        </a>
      </li>
      <li
        className="sc-citxvW jbJqkU"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="sign-out-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            ВЫХОД
          </div>
        </a>
      </li>
    </ul>
    <div
      className="sc-jJEKmz gcLRpF"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/UserMenu Menu Item 1`] = `
<a
  className="sc-cxFLGX hbUEOQ"
  href="/user"
>
  <div
    className="sc-iwyWTf gzPuJA"
  >
    <img
      className="sc-bBXrwG dvQvNx"
      src="profile-icon.svg"
    />
  </div>
  <div
    className="sc-lmoMya ckTKGG"
  >
    ПРОФИЛЬ
  </div>
</a>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-fHuLxr hSfGWA"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-fHuLxr hSfGWA"
  >
    Styled Button
  </button>,
]
`;
